--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -25,4 +25,5 @@ a {
 
 @import './partials/sections/header';
 @import './partials/sections/comics';
+@import './partials/sections/comic';
 @import './partials/sections/footer';
