--- a/resources/sass/partials/_vars.scss
+++ b/resources/sass/partials/_vars.scss
@@ -5,7 +5,9 @@ $bg-color: #1c1c1c;
 $secondary-col: #303030;
 $social-col: #7d7d7d;
 $accent-col: #0182f9;
+$accent-light: #01a9da;
 $clear-col: #fff;
+$price-col: #55ba5a;
 
 // sizes
 $sp-05: .5rem;
