--- a/resources/sass/partials/_vars.scss
+++ b/resources/sass/partials/_vars.scss
@@ -8,6 +8,7 @@ $accent-col: #0182f9;
 $accent-light: #01a9da;
 $clear-col: #fff;
 $price-col: #55ba5a;
+$title-col: #103e5f;
 
 // sizes
 $sp-05: .5rem;
